--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -67,6 +67,7 @@
 						<h4>Other</h4>
 						<ul>
 							<li><a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">ebook</a></li>
+							<li><a href="http://kferris10.github.io/R-Intro/">R Intro</a></li>
 						</ul>
 					</div>
 				</div>
@@ -78,10 +79,18 @@
 						<h4>Handouts</h4>
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mockjury.pdf">Mock Jury introduction</a></li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mock-permute-handout.html">Permutation of Mock Jury Data</a></li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Homework</h4>
+						<ul>
+							<li>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj1/Project1-Kevin.pdf">Project 1</a>
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj1/stress.csv">Stress Data for Project 1</a>
+							</li>
+						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Other</h4>
