--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -61,7 +61,7 @@
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Homework</h4>
-						<ul><li><strong>Homework 1:</strong> Email Kevin at <a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</a></li></ul>
+						<ul><li><strong>Homework 1:</strong> Email Kevin at <a href="mailto:kevin.ferris10@gmail.com">kevin.ferris10@gmail.com</a> (Due Jan 16)</li></ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Other</h4>
@@ -78,15 +78,16 @@
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Handouts</h4>
 						<ul>
-							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mockjury.pdf">Mock Jury introduction</a></li>
-							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mock-permute-handout.html">Permutation of Mock Jury Data</a></li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mockjury.pdf">Mock Jury introduction</a> (Jan 14)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch1/mock-permute-handout.html">Permutation of Mock Jury Data</a> (Jan 16)</li>
 						</ul>
 					</div>
 					<div class="col-lg-4 col-sm-6 col-xs-12">
 						<h4>Homework</h4>
 						<ul>
 							<li>
-								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj1/Project1-Kevin.pdf">Project 1</a>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj1/Project1-Kevin.pdf">Project 1</a> 
+								<span>(Due Jan 23)</span>
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj1/stress.csv">Stress Data for Project 1</a>
 							</li>
