--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -51,6 +51,7 @@
 			<div class = "col-lg-12 col-sm-12" id = "questions">
 				<h1>FAQ</h1>
 				<ul>
+					<li><a href="#stat-216-required">Is STAT 216 required for this course?</a></li>
 					<li><a href="#textbook">Is the textbook required?  Can I use a previous edition of the textbook?</a></li>
 					<li><a href="#use-D2L">Will D2L be used for this course?</a></li>
 					<li><a href="#need-computer">Do I need a computer?</a></li>
@@ -63,6 +64,10 @@
 			</div>
 
 			<div class="col-lg-12 col-sm-12" id="answers">
+				<h2 id="stat-216-required">Is STAT 216 required for this course?</h2>
+				<p>Yes, you must have taken STAT 216 (or an equivalent course).  This course will continue where STAT 216 left off so it is important that you have recently taken STAT 216.</p>
+				<hr>
+
 				<h2 id="textbook">Is the textbook required?  Can I use a previous edition of the textbook?</h2>
 				<p>Yes, the textbook is required.  You can buy a paper copy from the bookstore for approximately $35.  Additionally, an ebook <a href="https://scholarworks.montana.edu/xmlui/handle/1/2999">is available for download</a>.</p>
 				<p>Older versions of the textbook are not recommended.  The book has substantially changed from Version 1 to Version 2 so we strongly encourage you to use the new book.</p>
