--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -144,9 +144,11 @@
 								<br>
 								<span>(Due Feb 9)</span>
 								<br>
-								<a href="">Key</a>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch2/Homework3-Key.pdf">Key</a>
 							</li>
-							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj3/Project%203.docx">Project 3</a></li>
+							<li>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj3/Project%203.docx">Project 3</a> (Due Feb 13)
+							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
